[package]
name = "plain_path"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Expands `~` in a path if present."
repository = "https://github.com/azriel91/plain_path"
documentation = "https://docs.rs/plain_path/"
readme = "README.md"
keywords = ["ssh", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
dirs = "3.0.1"
